# sr5_description

./: CMakeLists.txt  README.md  package.xml  urdf.rviz
config/: joint_names_sr5_description.yaml
launch/: display.launch  gazebo.launch
meshes/: base_link.STL  hand_link.STL  left_finger_link.STL  link1.STL  link2.STL  link3.STL  link4.STL  link5.STL  link6.STL  link7.STL  right_finger_link.STL
rviz/: display.rviz
urdf/: Untitled Document  sr5_description.csv  sr5_description.urdf  sr5_description_moveit_config.urdf
