<package format="2">
  <name>sr5_description</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for sr5</p>
    <p>This package contains configuration data, 3D models and launch files
for sr5 robot</p>
  </description>
  <author>Akkharaphong EKSIRI</author>
  <maintainer email="akkharaphong.e@bu.ac.th" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher</depend>
  <depend>gazebo</depend>
  <export>
    <architecture_independent />
  </export>
</package>
